--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build:production": "npm run build:angular-production && npm run build:chrome-production && npm run pack",
     "watch": "npm run clean && npm-run-all --parallel watch:*",
     "clean": "rimraf angular/dist",
-    "pack": "cd angular/dist && bestzip ../../extension-build.zip *"
+    "pack": "cd angular/dist && bestzip ../../extension-build.zip *",
+    "build:prod": "cross-env NODE_ENV=production ng build --configuration production"
   },
   "private": true,
   "dependencies": {
@@ -36,12 +37,20 @@
     "@angular-devkit/build-angular": "12.1.1",
     "@angular/cli": "~12.2.4",
     "@angular/compiler-cli": "~12.2.0",
+    "@tailwindcss/forms": "latest",
+    "@tailwindcss/line-clamp": "latest",
+    "@tailwindcss/typography": "latest",
     "@types/chrome": "0.0.141",
     "@types/node": "^12.12.32",
+    "autoprefixer": "^10.3.6",
     "awesome-typescript-loader": "^5.2.1",
     "bestzip": "^2.1.7",
+    "cross-env": "^7.0.3",
+    "ngx-tailwind": "^2.2.2",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.3.8",
     "rimraf": "^2.7.1",
+    "tailwindcss": "^2.2.16",
     "ts-node": "~10.3.0",
     "typescript": "~4.3.5",
     "webpack-cli": "^4.9.0"
