--- a/angular/src/manifest.json
+++ b/angular/src/manifest.json
@@ -4,10 +4,11 @@
   "short_name": "bo-planner",
   "version": "1.0.0",
   "description": "Buy order planner",
-  "permissions": ["tabs"],
+  "permissions": ["tabs", "scripting"],
+  "host_permissions": ["http://*/", "https://*/"],
   "action": {
     "default_popup": "index.html?#/popup",
-    "default_title": "Angular Chrome Extension"
+    "default_title": "Buy Order Planner"
   },
   "options_page": "index.html?#/options",
   "content_scripts": [
@@ -21,5 +22,11 @@
   },
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["assets/market.js", "boModal.js"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
