--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ngneat/dialog": "^1.7.0",
     "ngx-build-plus": "^12.2.0",
     "ngx-indexed-db": "^9.4.0",
     "rxjs": "~6.6.0",
@@ -51,6 +52,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.8",
     "rimraf": "^2.7.1",
+    "schematics-utilities": "^2.0.3",
     "tailwindcss": "^2.2.16",
     "ts-node": "~10.3.0",
     "typescript": "~4.3.5",
