--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ngneat/dialog": "^1.7.0",
+    "animate.css": "^4.1.1",
     "ngx-build-plus": "^12.2.0",
     "ngx-indexed-db": "^9.4.0",
     "rxjs": "~6.6.0",
