--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:production": "npm run build:angular-production && npm run build:chrome-production && npm run pack",
     "watch": "npm run clean && npm-run-all --parallel watch:*",
     "clean": "rimraf angular/dist",
-    "pack": "cd angular/dist && bestzip ../../extension-build.zip *",
+    "pack": "cd angular/dist && bestzip ../../bo-planner.zip *",
     "build:prod": "cross-env NODE_ENV=production ng build --configuration production"
   },
   "private": true,
